Fix counter clipping

--- a/theme.print.css
+++ b/theme.print.css
@@ -15,11 +15,11 @@ hr::before {
     text-align: center;
     margin: auto;
     display: block;
-    font-size: 11pt;
+    font-size: 12pt;
 }
 
 p {
-    font-size: 11pt;
+    font-size: 12pt;
     line-height: 1.5;
     margin-top: 0em;
     margin-bottom: 0em;
@@ -56,6 +56,7 @@ h2 {
     font-weight: 400;
     letter-spacing: .1em;
     string-set: chapter-title content();
+    margin-bottom: .5in;
 }
 
 p:first-of-type {
@@ -86,7 +87,7 @@ nav li {
 }
 
 nav li a {
-    font-size: 11pt;
+    font-size: 12pt;
     line-height: 1.5;
     display: inline-flex;
     width: 100%;
@@ -137,6 +138,7 @@ nav li a::before {
     }
     @top-left {
         content: counter(page);
+        padding-left: .05in;
     }
 }
 
@@ -147,6 +149,7 @@ nav li a::before {
     }
     @top-right {
         content: counter(page);
+        padding-right: .05in;
     }
 }
 
